Closed
Bug 1674540
Opened 5 years ago
Closed 5 years ago
Unable to compile SpiderMonkey builds on Windows 10
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
84 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | fixed |
People
(Reporter: gkw, Assigned: alexical)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
After bug 1665455 landed, I am now unable to compile SpiderMonkey builds on Windows 10.
The first bad revision is:
changeset: https://hg.mozilla.org/mozilla-central/rev/7e7a708a9997
user: Doug Thayer
date: Thu Oct 29 19:03:59 2020 +0000
summary: Bug 1665455 - Animate the Skeleton UI r=agashlin
c:/Users/itx1win/trees/mozilla-central/intl/icu/source/common/unistr.cpp(1979,13): warning: unused function 'uprv_UnicodeStringDummy' [-Wunused-function]^M
static void uprv_UnicodeStringDummy(void) {^M
^^M
1 warning generated.^M
Compiling thiserror-impl v1.0.6
Compiling baldrdash v0.1.0 (C:\Users\itx1win\trees\mozilla-central\js\src\wasm\cranelift)
Compiling thiserror v1.0.6
c:/Users/itx1win/trees/mozilla-central/mozglue/misc/PreXULSkeletonUI.cpp(20,10): fatal error: 'prthread.h' file not found^M
#include "prthread.h"^M
^~~~~~~~~~~~^M
1 error generated.^M
mozmake[3]: *** [c:/Users/itx1win/trees/mozilla-central/config/rules.mk;676: PreXULSkeletonUI.obj] Error 1^M
mozmake[2]: *** [c:/Users/itx1win/trees/mozilla-central/config/recurse.mk;72: mozglue/misc/target-objects] Error 2^M
mozmake[2]: *** Waiting for unfinished jobs....^M
Compiling cranelift-frontend v0.67.0 (https://github.com/bytecodealliance/wasmtime?rev=e22e2c3722f2fbccd3c8d3230119fa04c332c69c#e22e2c37)
Compiling cranelift-wasm v0.67.0 (https://github.com/bytecodealliance/wasmtime?rev=e22e2c3722f2fbccd3c8d3230119fa04c332c69c#e22e2c37)
Compiling jsrust_shared v0.1.0 (C:\Users\itx1win\trees\mozilla-central\js\src\rust\shared)
Compiling jsrust v0.1.0 (C:\Users\itx1win\trees\mozilla-central\js\src\rust)
Finished dev [optimized + debuginfo] target(s) in 2m 28s
mozmake[1]: *** [c:/Users/itx1win/trees/mozilla-central/config/recurse.mk;34: compile] Error 2^M
mozmake: *** [c:/Users/itx1win/trees/mozilla-central/config/rules.mk;355: default] Error 2^M
'LIBCLANG_PATH=c:\Users\itx1win\.mozbuild\clang\bin' MAKE=mozmake sh ./configure --host=x86_64-pc-mingw32 --target=x86_64-pc-mingw32 --enable-debug --enable-gczeal --enable-debug-symbols --disable-tests
My clang mozbuild is the latest as per mach bootstrap. Tested on m-c rev 404ed30949a4.
Flags: needinfo?(dothayer)
Updated•5 years ago
|
Product: Firefox Build System → Firefox
Comment 1•5 years ago
|
||
Try removing that #include. It doesn't seem it should be there in the first place: mozglue can't depend on nspr.
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1665455
status-firefox82:
--- → unaffected
status-firefox83:
--- → unaffected
status-firefox84:
--- → affected
status-firefox-esr78:
--- → unaffected
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → dothayer
Status: NEW → ASSIGNED
Flags: needinfo?(dothayer)
| Assignee | ||
Comment 3•5 years ago
|
||
This snuck in after I forgot to delete this upon realizing I couldn't
use nspr stuff in mozglue.
Updated•5 years ago
|
Attachment #9185160 -
Attachment description: Bug 1674540 - Remove unused prthrad.h include r?agashlin → Bug 1674540 - Remove unused prthread.h include r?agashlin
Pushed by dothayer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/df5dce707d2b
Remove unused prthread.h include r=agashlin
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•