Bug 1674540 - Remove unused prthread.h include r=agashlin

This snuck in after I forgot to delete this upon realizing I couldn't
use nspr stuff in mozglue.

Differential Revision: https://phabricator.services.mozilla.com/D95530